<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
  <string name="capture_name">QR Code Capture</string>
  <string name="encoder_name">QR Code Encoder</string>
  <string name="decoder_name">QR Code Decoder</string>

  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>

  <string name="msg_default_contents">Contents</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>

  <string name="result_address_book">Found contact info</string>
  <string name="result_calendar">Found calendar event</string>
  <string name="result_email_address">Found email address</string>
  <string name="result_geo">Found geographic coordinates</string>
  <string name="result_isbn">Found book</string>
  <string name="result_product">Found product</string>
  <string name="result_sms">Found SMS address</string>
  <string name="result_tel">Found phone number</string>
  <string name="result_text">Found plain text</string>
  <string name="result_uri">Found URL</string>
  <string name="result_wifi">Found WLAN Configuration</string>

  <string name="wifi_changing_network">Changing Network</string>
  <string name="wifi_ssid_label">Network Name</string>
  <string name="wifi_type_label">Type</string>

  <string name="barcode_image">Barcode Image</string>

    <!--
        自定义的字符串资源
    -->
    <string name="app_name">书格</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">关于</string>
    <string name="action_scan">扫描</string>
    <string name="action_search">搜索</string>
    <string name="action_help">帮助</string>
    <string name="title_activity_homepage">首页</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_scan">扫描</string>
    <string name="title_activity_search">搜索</string>
    <string name="scan_hint">将条形码/二维码放入框框内，即可自动扫描信息</string>
    <string name="edit_hint">请输入您的书本所放位置</string>
    <string name="app_version">版本： 1.0</string>
    <string name="app_author">作者： 胖鱼工作室</string>
    <string name="app_email">邮箱： psj16@126.com</string>
    <string name="app_feedback">写下您遇到的问题或者建议...</string>
    <string name="app_feedback_title">意见反馈</string>
    <string name="app_feedback_submit">提交</string>
    <string name="app_help">
        内容小叙：\n
        书格是一款专为爱书人设计的书籍整理APP，可以通过扫描书籍的条形码获知该书的基本信息，可以点击书籍信息文字区域，进入编辑页面，记录图书的所在位置方便寻找书籍。\n
        相信很多看书人都有同感，当家里书太多时，想看的书根本找不到，
        我们也有这样一种困扰所以努力写了一个APP，现将它分享给众多爱书的你们，第一次做东西问题肯定多多，欢迎大家多多提出建议，以及你们想实现的功能~~我们会及时改正推出^_^ 。\n\n

        书格使用说明：\n
          书格可提供给您书柜里书的记忆。\n
          使用方法：\n
        1、扫描书本后面的条形码，通过网络获取书本的相关信息\n
        2、在书本的编辑界面，由用户输入书本放置位置（方便日后再寻找）\n
        3、可通过搜索功能进行书本的查找，可随时更新书本放置信息\n
        4、可随时增加或者删除您的书本信息\n
    </string>

    <item name="tag_first" type="id"></item>
    <item name="tag_second" type="id"></item>

    <string name="isFirstTimeStartup">IsFirstTimeStartup</string>
    <string name="isDeletingItem">IsDeletingItem</string>
    <string name="bookcellPreferenceFile">BookcellPreferenceFile</string>

    <string name="bookTitle">标题:</string>
    <string name="bookPosition">位置:</string>
    <string name="bookAuthor">作者:</string>
    <string name="bookPub">出版:</string>
    <string name="bookDescribe">简介:</string>
    <string name="edit">  编辑</string>
    <string name="done">完成</string>

    <!--
    提示语
    -->
    <string name="searchConfirm">请输入正确书名</string>
    <string name="scanTips">请将条形码放置在扫描框中</string>
    <string name="networkDisconnet">亲，请确认是否忘记联网？</string>
    <string name="bookAlreadyInDB">亲，你扫的书本已经存在:)</string>
    <string name="notISBNCode">亲，目前只支持书本条形码:)</string>
    <string name="inputEmpty">亲，您没有输入任何文字:)</string>
    <string name="scanEmpty">亲，您未扫描任何东西</string>

    <!--
    Intent usage
    -->
    <string name="isbnIntent">ISBN_INTENT</string>
    <string name="isCameraReturned">IS_CAMERA_RETURNED</string>
    <string name="isbnValue">ISBN_VALUE</string>

</resources>
