<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bookcell.homepage" >

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/scan"
        android:title="@string/action_scan"
        android:showAsAction="ifRoom"
    />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom"
    />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/help"
        android:title="@string/action_help"
        android:showAsAction="never|withText"
    />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:showAsAction="never|withText" />
</menu>
