<!--
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnHomepage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_activity_homepage"
            />

        <Button
            android:id="@+id/btnScan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_activity_scan"
            />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_activity_search"
            />

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffe1e0de" >

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/scan_hint"
            />

        <ImageView
            android:id="@+id/qrcode_bitmap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            />
    </RelativeLayout>
</LinearLayout>
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent">

<SurfaceView android:id="@+id/preview_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
</SurfaceView>

<com.bookcell.ViewfinderView
    android:id="@+id/viewfinder_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent">
</com.bookcell.ViewfinderView>

<LinearLayout android:id="@+id/result_view"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/result_view"
    android:gravity="center"
    android:padding="4dip">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="right|center_vertical">

        <ImageView android:id="@+id/barcode_image_view"
            android:layout_width="160dip"
            android:layout_height="wrap_content"
            android:maxWidth="160dip"
            android:maxHeight="160dip"
            android:layout_marginBottom="4dip"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/barcode_image">
        </ImageView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/format_text_view_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_default_format"
                android:textColor="@color/result_minor_text"
                android:textStyle="bold"
                android:textSize="14sp"
                android:paddingRight="4dip">
            </TextView>
            <TextView android:id="@+id/format_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/result_minor_text"
                android:textSize="14sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/type_text_view_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_default_type"
                android:textColor="@color/result_minor_text"
                android:textStyle="bold"
                android:textSize="14sp"
                android:paddingRight="4dip">
            </TextView>
            <TextView android:id="@+id/type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/result_minor_text"
                android:textSize="14sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/time_text_view_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_default_time"
                android:textColor="@color/result_minor_text"
                android:textStyle="bold"
                android:textSize="14sp"
                android:paddingRight="4dip">
            </TextView>
            <TextView android:id="@+id/time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/result_minor_text"
                android:textSize="14sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/meta_text_view_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_default_meta"
                android:textColor="@color/result_minor_text"
                android:textStyle="bold"
                android:textSize="14sp"
                android:paddingRight="4dip">
            </TextView>
            <TextView android:id="@+id/meta_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/result_minor_text"
                android:textSize="14sp">
            </TextView>
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView android:id="@+id/contents_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/result_text"
                android:textColorLink="@color/result_text"
                android:textSize="22sp"
                android:paddingLeft="12dip">
            </TextView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

<TextView android:id="@+id/status_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:background="@color/transparent"
    android:text="@string/msg_default_status"
    android:textColor="@color/status_text"
    android:textSize="14sp">
</TextView>

</FrameLayout>

